Add id in message response && change notice for news
